third_party/move/move-compiler-v2/tests/checking/typing/type_variable_join_threaded_pack_invalid.exp

Diagnostics:
error: unable to infer type: `Container::T<?20>`
   ┌─ tests/checking/typing/type_variable_join_threaded_pack_invalid.move:36:17
   │
36 │         let v = Container::new();
   │                 ^^^^^^^^^^^^^^^^

error: expected `bool` but found `integer`
   ┌─ tests/checking/typing/type_variable_join_threaded_pack_invalid.move:42:9
   │
42 │         b
   │         ^
